--- a/PyCitySchools/PyCitySchools_final.ipynb
+++ b/PyCitySchools/PyCitySchools_final.ipynb
@@ -470,7 +470,7 @@
     "# Create a groupby object by grouping by school_name to use later\n",
     "grouped_by_school = school_data_complete.groupby(['school_name'])\n",
     "\n",
-    "# Grab the different school types using first() since unique is technically returning an array of unique values but first will return a string or the first element in that array and we already know there is only 1 unique type per school\n",
+    "# (1) Grab the different school types using first() since unique is technically returning an array of unique values but first will return a string or the first element in that array and we already know there is only 1 unique type per school\n",
     "school_types = grouped_by_school['type'].first()\n"
    ]
   },
@@ -492,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (1) Call unique on the budget column to get the budget per school. Cast as an int since unique() is technically returning an array of unique values\n",
+    "# Call unique on the budget column to get the budget per school. Cast as an int since unique() is technically returning an array of unique values\n",
     "per_school_budget = grouped_by_school['budget'].unique().astype(float)\n"
    ]
   },
